--- a/works-cited.html
+++ b/works-cited.html
@@ -25,6 +25,6 @@
         <p><a class="style_link" href="https://www.newyorker.com/sports/sporting-scene/the-shot-that-stopped-basketball">- Basketball shooting Image: https://www.newyorker.com/sports/sporting-scene/the-shot-that-stopped-basketball</a></p>
         <p><a class="style_link" href="https://www.montgomerycountymd.gov/rec/activitiesandprograms/sports/adultsoccer.html">- Soccer Image: https://www.montgomerycountymd.gov/rec/activitiesandprograms/sports/adultsoccer.html</a></p>
     </div>
-    <a href="/Users/Altay/Desktop/IT 9/INT9_Altay_Bafrali_personal_website/index.html" class="button">Home Page</a>
+    <a href="index.html">Home Page</a>
 </body>
 </html>
