--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <h4>or</h4>
     <a class="contact_buttons" href="https://www.facebook.com/">Facebook</a>
     <p>© Jack Wolfeschlegelsteinhausenbergerdorff.</p>
-    <a href="/Users/Altay/Desktop/IT 9/INT9_Altay_Bafrali_personal_website/index.html" class="button">Home Page</a>
+    <a href="index.html" class="button">Home Page</a>
 </body>
 </html>
 
